--- a/src/App.scss
+++ b/src/App.scss
@@ -103,6 +103,11 @@ nav .inner {
 }
 nav .links > * {
 }
+nav .links {
+  @include only-phone {
+    display: none;
+  }
+}
 nav a {
   @include font-size(m);
   position:relative;
@@ -117,7 +122,9 @@ nav a {
 nav .logo {
   display:flex;
   @include only-phone {
-    display:none;
+    .app-name {
+      display:none;
+    }
   }
 }
 nav .logo img + *{
@@ -138,6 +145,71 @@ nav a.router-link-exact-active.link:after {
   left:10px;
   border-top:3px solid #F7296E;
   bottom:-8px;
+}
+nav .inner {
+  @include only-phone {
+    .links + .mobile-nav {
+      flex: 1;
+    }
+    .mobile-nav {
+      flex:1;
+    }
+  }
+}
+nav .mobile-nav {
+  display: none;
+  @include only-phone {
+    display: flex;
+    .mobile-nav-fixed {
+      background-color: #311b58;
+      display: none;
+      width: 100vw;
+      height: 100vh;
+    }
+    .mobile-nav-fixed.active {
+      display: block;
+      z-index: 1;
+      position: fixed;
+      top: 0;
+      left: 0;
+      .mobile-nav-fixed-action {
+        text-align: right;
+      }
+      .mobile-nav-fixed-holder a {
+        display: block;
+        text-align: right;
+        font-size: 30px;
+        font-weight: 700;
+        margin: 0;
+        line-height: 2;
+      }
+      .mobile-nav-fixed-secondary-links a {
+        font-weight: 300;
+        font-size: 20px;
+        line-height: 2.5;
+      }
+    }
+  }
+}
+.mobile-nav-fixed-holder .inner {
+  flex-direction: column;
+  margin-top: 5vh;
+}
+.mobile-nav-fixed-socials-links a {
+  text-align: right;
+  flex:1;
+}
+.mobile-nav-fixed-socials-links-row {
+  display: flex;
+  // justify-content: space-between;
+  text-align: right;
+  a {
+    width: calc(1/3*100% - (1 - 1/3)*10px);
+  }
+}
+.mobile-nav .pageName {
+  flex:1;
+  text-align: right;
 }
 .screen {
   padding-bottom:130px;
