--- a/src/App.scss
+++ b/src/App.scss
@@ -201,10 +201,14 @@ nav .mobile-nav {
 }
 .mobile-nav-fixed-socials-links-row {
   display: flex;
-  // justify-content: space-between;
+  justify-content: flex-end;
   text-align: right;
   a {
-    width: calc(1/3*100% - (1 - 1/3)*10px);
+    flex:0;
+    margin: 10px 10px !important;
+    img {
+      display: block;
+    }
   }
 }
 .mobile-nav .pageName {
