--- a/src/partials/footer/footer.scss
+++ b/src/partials/footer/footer.scss
@@ -29,10 +29,12 @@
     margin-right:20px;
   }
   .footer-social-links {
-    display: flex;
-    width: 100%;
-    div {
-      flex: 1;
-    }
+    @include only-phone {
+      display: flex;
+      width: 100%;
+      div {
+        flex: 1;
+      }
+    }    
   }
 }
