[GH-#25] add reverse animation

--- a/src/App.scss
+++ b/src/App.scss
@@ -234,6 +234,10 @@ nav + main > .screen > :first-child{
   }
 }
 
-.slide-in-top {
+.slide-in-top,
+.slide-in-top-out {
   animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+.slide-in-top-out {
+  animation-direction: reverse;
 }
