adding account related code, and updated some index code

--- a/src/components/blank/style.scss
+++ b/src/components/blank/style.scss
@@ -1,23 +1,14 @@
 //------------------------------
 // *****************************
-// Tag Blank
+// Blank
 // *****************************
 //------------------------------
 
-@mixin prefix($property, $value, $prefixes: ()) {
-  @each $prefix in $prefixes {
-    -#{$prefix}-#{$property}: $value;
-  }
-
-  #{$property}: $value;
-}
-
-.tag-blank {
-  @include prefix(transform, translate(-50%, -50%), 'webkit' 'ms');
-
+.blank {
   position: absolute;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
