--- a/src/screens/address/address.scss
+++ b/src/screens/address/address.scss
@@ -14,6 +14,9 @@
   .title .ae-identity-avatar {
     margin-right:20px;
   }
+  .title .named-address /deep/ .ae-address {
+    @include font-size(l);
+  }
   .header .field {
     display:block;
   }
