--- a/src/screens/transactionDetail/transactionDetail.scss
+++ b/src/screens/transactionDetail/transactionDetail.scss
@@ -21,7 +21,7 @@
     border-bottom:2px solid $black;
   }
   .named-address ,
-  .ae-address {
+  /deep/ .ae-address {
     @include font-size(m);
   }
   .ae-hash {
