Import common SCSS explicity

--- a/src/screens/index/index.scss
+++ b/src/screens/index/index.scss
@@ -1,3 +1,5 @@
+@import '../../style/mixins';
+
 .index-screen {
   header {
     background-image: linear-gradient(-134deg, $aubergineLight 0%, $aubergin 100%);
