--- a/src/partials/footer/footer.scss
+++ b/src/partials/footer/footer.scss
@@ -1,3 +1,5 @@
+@import '../../style/mixins';
+
 .footer {
   padding-top:50px;
   padding-bottom:50px;
@@ -38,6 +40,6 @@
       div {
         flex: 1;
       }
-    }    
+    }
   }
 }
