Refactor TxType component as txTypeToName filter

--- a/src/screens/transactionDetail/transactionDetail.scss
+++ b/src/screens/transactionDetail/transactionDetail.scss
@@ -13,7 +13,7 @@
     @include font-size(xxl);
     color:$black;
   }
-  .title + .tx-type {
+  .title + h2 {
     margin-top:0.3em;
     padding-bottom:1.3rem;
     margin-bottom:1.3rem;
