--- a/src/app.scss
+++ b/src/app.scss
@@ -252,18 +252,48 @@ a {
   width:80px;
   height: 15px;
   border-radius: 2px;
-  margin: 5px 0px 5px 5px;
+  margin: 5px 0px 2px 5px;
   animation: pulse 2s infinite ease-in-out;
+}
 
-  @keyframes pulse {
-    0% {
-      background-color: rgba(256, 256, 256, 0.1)
-    }
-    50% {
-      background-color: rgba(256, 256, 256, 0.3)
-    }
-    100% {
-      background-color: rgba(256, 256, 256, 0.1)
-    }
+@keyframes pulse {
+  0% {
+    background-color: rgba(256, 256, 256, 0.1)
   }
+  50% {
+    background-color: rgba(256, 256, 256, 0.3)
+  }
+  100% {
+    background-color: rgba(256, 256, 256, 0.1)
+  }
+}
+
+.fill-dummy-grey{
+  display: inline-block;
+  width:120px;
+  height: 18px;
+  border-radius: 2px;
+  margin: 5px 0px 2px 5px;
+  animation: pulse-grey 2s infinite ease-in-out;
+}
+
+@keyframes pulse-grey {
+  0% {
+    background-color: rgba(49, 27, 50, 0.1)
+  }
+  50% {
+    background-color: rgba(49, 27, 50, 0.3)
+  }
+  100% {
+    background-color: rgba(49, 27, 50, 0.1)
+  }
+}
+
+.fill-dummy-grey-big{
+  display: inline-block;
+  width:250px;
+  height: 25px;
+  border-radius: 2px;
+  margin: 5px 0px 2px 5px;
+  animation: pulse-grey 2s infinite ease-in-out;
 }
