--- a/src/app.scss
+++ b/src/app.scss
@@ -256,6 +256,16 @@ a {
   animation: pulse 2s infinite ease-in-out;
 }
 
+.fill-dummy-small{
+  display: inline-block;
+  width:30px;
+  height: 15px;
+  border-radius: 2px;
+  margin: 5px 0px 2px 5px;
+  animation: pulse 2s infinite ease-in-out;
+}
+
+
 @keyframes pulse {
   0% {
     background-color: rgba(256, 256, 256, 0.1)
