--- a/src/app.scss
+++ b/src/app.scss
@@ -265,6 +265,15 @@ a {
   animation: pulse 2s infinite ease-in-out;
 }
 
+.fill-dummy-big{
+  display: inline-block;
+  width:250px;
+  height: 25px;
+  border-radius: 2px;
+  margin: 5px 0px 2px 5px;
+  animation: pulse 2s infinite ease-in-out;
+}
+
 
 @keyframes pulse {
   0% {
