add network loader

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -8,8 +8,12 @@ $aubergineLight : #6F53A1;
 $silver : #F0F0F0;
 $smoke : #F5F5F5;
 $magaenta : #F7296E;
+$error : #ff0d6a;
 $white : #FFFFFF;
 $black : #1E1E1E;
+$darkGrey: #76818c;
+$connectBlack: #203040;
+$paleGrey: #edf3f7;
 
 $phone-width : 600px;
 $desktop-width : 900px;
