--- a/src/partials/latestBlock/latestBlock.scss
+++ b/src/partials/latestBlock/latestBlock.scss
@@ -13,6 +13,13 @@
     padding:50px 100px 50px 0;
     max-width:250px;
   }
+  .buttons {
+    display: flex;
+    flex-direction:column;
+    justify-content: space-evenly;
+    min-height: 80px;
+    max-width: 200px;
+  }
   .explanation .title {
     margin-top:0;
     @include font-size(xxl);
