add animation smoother

--- a/src/screens/generationList/generationList.scss
+++ b/src/screens/generationList/generationList.scss
@@ -59,6 +59,22 @@
     margin-bottom:50px;
     .transactions {
       min-width: 969px;
+      td {
+        position: relative;
+        .fill-dummy {
+          max-width: 90%;
+          position: absolute;
+          top: 5px;
+          right: 0;
+        }
+      }
     }
+  }
+
+  .fade-enter-active, .fade-leave-active {
+    transition: opacity 1s;
+  }
+  .fade-enter, .fade-leave-to /* .fade-leave-active до версии 2.1.8 */ {
+    opacity: 0;
   }
 }
