fix tx for mobile

--- a/src/screens/transactionDetail/transactionDetail.scss
+++ b/src/screens/transactionDetail/transactionDetail.scss
@@ -40,6 +40,15 @@
   .height-item {
     &__data {
       color: $magaenta;
+      @include only-phone {
+        display: block;
+      }
+    }
+
+    .confirmations {
+      @include only-phone {
+        font-size: 14px;
+      }
     }
   }
   .ae-loader {
