vertically align in recent generation (mobile)

--- a/src/partials/recentBlocks/recentBlocks.scss
+++ b/src/partials/recentBlocks/recentBlocks.scss
@@ -54,7 +54,7 @@
     tr + tr {
       margin-top:20px;
     }
-    tr td:first-child {
+    tr td {
       width:100%;
     }
     tr td:first-child + td {
