--- a/src/screens/transactionDetail/transactionDetail.scss
+++ b/src/screens/transactionDetail/transactionDetail.scss
@@ -9,9 +9,9 @@
     background:$white;
     max-width:777px;
     margin:30px auto 0 auto;
-    padding:35px 70px;
+    padding:35px 70px 0;
     @include only-phone {
-      padding:35px 30px;
+      padding:35px 30px 0;
     }
   }
   .title {
@@ -59,5 +59,11 @@
   }
   .ae-loader {
     margin: 0;
+  }
+  .objView {
+    margin: 0 -70px;
+    @include only-phone {
+      margin: 0 -30px;
+    }
   }
 }
