layout fix for generation list view
layout fix for generation list view

--- a/src/screens/generationList/generationList.scss
+++ b/src/screens/generationList/generationList.scss
@@ -68,9 +68,7 @@
         position: relative;
         .fill-dummy {
           max-width: 90%;
-          position: absolute;
-          top: 5px;
-          right: 0;
+          margin: 0 ;
         }
       }
     }
