State Channel Transaction
* State Channel Transaction (Create state tx, close mutual state tx)

* separate with Raw tx data

* add solo force progress

--- a/src/screens/transactionDetail/transactionDetail.scss
+++ b/src/screens/transactionDetail/transactionDetail.scss
@@ -60,6 +60,11 @@
   .ae-loader {
     margin: 0;
   }
+
+  /deep/ .poi {
+    word-break: break-all;
+  }
+
   .objView {
     margin: 0 -70px;
     @include only-phone {
