Status page- mobile
* Status page- mobile

* fix width dependency

--- a/src/screens/status/status.scss
+++ b/src/screens/status/status.scss
@@ -4,4 +4,15 @@
   > * {
     @include content-max-width;
   }
+
+  .objView {
+    width: 95%;
+  }
+}
+
+.table-wrapper {
+  overflow-x: auto;
+  table {
+    width: 100%;
+  }
 }
