--- a/src/screens/generationList/generationList.scss
+++ b/src/screens/generationList/generationList.scss
@@ -1,5 +1,8 @@
 @import '../../style/mixins';
 .generation-list-screen {
+  .abc{
+    //width: 80px;
+  }
   background: $aubergin;
   color:$white;;
   >.inner {
@@ -33,18 +36,8 @@
   .height {
     @include font-size(l);
   }
-  @include only-phone {
-    table, td {
-      display:block;
-    }
-    tr {
-      display:flex;
-      justify-content:space-between;
-      flex-wrap:wrap;
-    }
-    tr + tr {
-      margin-top:10px;
-    }
+  tr + tr {
+    margin-top:10px;
   }
   .account-address {
     color:$magaenta;
@@ -63,7 +56,10 @@
     overflow-x: auto;
     margin-bottom:50px;
     .transactions {
-      min-width: 969px;
+      width: 100%;
+      @include phone-and-tablet{
+        min-width: 700px;
+      }
       td {
         position: relative;
         .fill-dummy {
@@ -72,11 +68,5 @@
         }
       }
     }
-  }
-  .fade-enter-active, .fade-leave-active {
-    transition: opacity 1s;
-  }
-  .fade-enter, .fade-leave-to /* .fade-leave-active до версии 2.1.8 */ {
-    opacity: 0;
   }
 }
